--- a/Housing_Project.ipynb
+++ b/Housing_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM/gVqGr+VzHnvwZlw+zqMy",
+      "authorship_tag": "ABX9TyOyjyOtaa9ALMcHWN+IDXvb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,6 +41,27 @@
       ],
       "metadata": {
         "id": "L4vfoxXCO4mI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Agenda\n",
+        "\n",
+        "1. Data Cleaning\n",
+        "2. Explolatory Data Analysis(EDA)\n",
+        "3. Data Transformation\n",
+        "4. Model 1.1 Basic Model\n",
+        "5. Checking for Multi-Collinearity.\n",
+        "6. Models 1.2, 1.3, 1.4\n",
+        "7. Checking for Heteroscedasticity and Model Correction\n",
+        "8. ACF/PACF Test to Check for AutoRegression\n",
+        "9. Model 2.1(ARIMA Model)\n",
+        "10. ADF Test for Stationarity\n",
+        "11. Final Model"
+      ],
+      "metadata": {
+        "id": "ut4feu-FCw-W"
       }
     },
     {
@@ -118,7 +139,7 @@
         "import pandas as pd\n",
         "\n",
         "\n",
-        "fred = Fred(api_key='0b2aff3aa3c85683a3890f2f82f6d162')\n",
+        "fred = Fred(api_key='my_api_key')\n",
         "\n",
         "# Fetch data from FRED (since 1985 onwards)\n",
         "start_date = '1985-01-01'\n",
